tests/baselines/reference/iteratorSpreadInCall.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall.ts(15,1): error TS2556: Expected 1 arguments, but got a minimum of 0.
tests/cases/conformance/es6/spread/iteratorSpreadInCall.ts(15,8): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall.ts (2 errors) ====
    function foo(s: symbol) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2556: Expected 1 arguments, but got a minimum of 0.
           ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.